# azure-sdk-for-cpp

./: .clang-format  .gitignore  AGENTS.md  BUILD-SUMMARY.md  BUILD_AND_USE.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CODE_OF_CONDUCT.md  CONTRIBUTING.html  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.src  Doxyfile  LICENSE.txt  NOTICE.txt  QUICK_START.md  README.md  REBUILD-GUIDE.md  SECURITY.md  SUPPORT.md  VERIFICATION.md  WINHTTP-BUILD-FIX.md  attestation.html  build-azure-core.bat  build-sdk.ps1  cgmanifest.json  core.html  cspell.json  eventhubs.html  identity.html  index.html  keyvault.html  manifest.json  navtoc.html  other.html  rebuild-sdk-full.ps1  rebuild-sdk.ps1  storage.html  (+3 more)
samples/helpers/get-env/: CMakeLists.txt  README.md
samples/helpers/service/: CMakeLists.txt  README.md
samples/integration/cmake-fetch-content/: CMakeLists.txt  README.md
samples/integration/cmake-vcpkg/: .gitignore  CMakeLists.txt  CMakeUserPresets.example.json  README.md  main.cpp  vcpkg-configuration.json  vcpkg.json
samples/integration/vcpkg/: CMakeLists.txt
samples/integration/vcpkg-all-smoke/: CMakeLists.txt  LICENSE  README.md
samples/integration/vcpkg-storage/: CMakeLists.txt  README.md
sdk/appconfiguration/azure-data-appconfiguration/: CHANGELOG.md  CMakeLists.txt  NOTICE.txt  README.md  cgmanifest.json  vcpkg.json
sdk/attestation/: CMakeLists.txt  assets.json  azure-attestation.sln  ci.yml  cmake_install.cmake  test-resources-pre.ps1  test-resources.json
sdk/attestation/azure-security-attestation/: CHANGELOG.md  CMakeLists.txt  NOTICE.txt  README.md  cgmanifest.json  cspell.json  vcpkg.json
sdk/core/: CMakeLists.txt  ci.yml  perf-tests.yml  perf.yml  test-resources.bicep  websockets.md
sdk/core/azure-core/: CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  NOTICE.txt  README.md  cgmanifest.json  vcpkg.json
sdk/core/azure-core-amqp/: CHANGELOG.md  CMakeLists.txt  NOTICE.txt  README.md  Test-Setup.ps1  cgmanifest.json  cspell.json  vcpkg.json
sdk/core/azure-core-opentelemetry/: CMakeLists.txt  NOTICE.txt  README.md  cgmanifest.json  vcpkg.json
sdk/core/azure-core-test/: CMakeLists.txt  NOTICE.txt  README.md  cgmanifest.json
sdk/core/azure-core-tracing-opentelemetry/: CHANGELOG.md  CMakeLists.txt  NOTICE.txt  README.md  cgmanifest.json  vcpkg.json
sdk/core/azure-core-xml/: CHANGELOG.md  CMakeLists.txt  NOTICE.txt  README.md  cgmanifest.json  vcpkg.json
sdk/core/perf/: CMakeLists.txt  NOTICE.txt  README.md  cgmanifest.json
sdk/core/performance-stress/: CMakeLists.txt  NOTICE.txt  README.md
sdk/eventhubs/: CMakeLists.txt  README.md  assets.json  ci.yml
sdk/eventhubs/azure-messaging-eventhubs/: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  cgmanifest.json  ci.yml  test-resources-post.ps1  test-resources.json  vcpkg.json
sdk/eventhubs/azure-messaging-eventhubs-blobcheckpoints/: CMakeLists.txt
sdk/eventhubs/azure-messaging-eventhubs-checkpointstore-blob/: CHANGELOG.md  CMakeLists.txt  README.md  cgmanifest.json  vcpkg.json
sdk/eventhubs/blob-store/: CMakeLists.txt  vcpkg.json
sdk/eventhubs/checkpointstore-blob/: CMakeLists.txt  README.md
sdk/eventhubs/messaging-eventhubs/: CMakeLists.txt  ci.yml  test-resources.json
sdk/identity/: CHANGELOG.md  CMakeLists.txt  assets.json  ci.yml  test-resources-pre.ps1  test-resources.json  vcpkg.json
sdk/identity/azure-identity/: CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  NOTICE.txt  README.md  TROUBLESHOOTING.md  cgmanifest.json  credential-chains.md  cspell.json  managed-identity-matrix.json  perf-resources.json  perf-tests.yml  perf.yml  tests.yml  vcpkg.json  version.txt
sdk/keyvault/: CMakeLists.txt  README.md  TROUBLESHOOTING.md  assets.json  ci.yml  gearamaeushsm-certificate0.cer  gearamaeushsm-certificate1.cer  gearamaeushsm-certificate2.cer  gearamaeushsm-security-domain.key  test-resources-post.ps1  test-resources.json  vcpkg.json
sdk/keyvault/azure-security-keyvault-administration/: CHANGELOG.md  CMakeLists.txt  NOTICE.txt  README.md  TROUBLESHOOTING.md  cgmanifest.json  vcpkg.json
sdk/keyvault/azure-security-keyvault-certificates/: CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  NOTICE.txt  README.md  TROUBLESHOOTING.md  perf-resources.json  perf-tests.yml  perf.yml  tsp-location.yaml  tspconfig.yaml  vcpkg.json
sdk/keyvault/azure-security-keyvault-common/: CHANGELOG.md  CMakeLists.txt  README.md  cgmanifest.json
sdk/keyvault/azure-security-keyvault-keys/: CHANGELOG.md  CMakeLists.txt  README.md  TROUBLESHOOTING.md  perf-resources.json  perf-tests.yml  perf.yml  test-resources-post.ps1  tsp-location.yaml  tspconfig.yaml  vcpkg.json
sdk/keyvault/azure-security-keyvault-secrets/: CHANGELOG.md  CMakeLists.txt  README.md  TROUBLESHOOTING.md  cgmanifest.json  client.tsp  perf-tests.yml  perf.yml  tsp-location.yaml  tspconfig.yaml  vcpkg.json
sdk/keyvault/cleanup/: CMakeLists.txt  cleanup.cpp
sdk/storage/: AGENTS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTION.md  Doxyfile  MigrationGuide.md  README.md  TestingGuide.md  assets.json  ci.yml  faq.md  test-resources-post.ps1  test-resources.json
sdk/storage/azure-storage-blobs/: AGENTS.md  BREAKINGCHANGES.md  CHANGELOG.md  CMakeLists.txt  NOTICE.txt  README.md  cgmanifest.json  perf-resources.bicep  perf-tests.yml  perf.yml  vcpkg.json
sdk/storage/azure-storage-common/: CHANGELOG.md  CMakeLists.txt  NOTICE.txt  README.md  cgmanifest.json  vcpkg.json
sdk/storage/azure-storage-datalake/: AGENTS.md
sdk/storage/azure-storage-datamovement/: CHANGELOG.md  CMakeLists.txt  NOTICE.txt  vcpkg.json
sdk/storage/azure-storage-files-datalake/: AGENTS.md  BREAKINGCHANGES.md  CHANGELOG.md  CMakeLists.txt  NOTICE.txt  README.md  cgmanifest.json  vcpkg.json  version.txt
sdk/storage/azure-storage-files-shares/: AGENTS.md  BREAKINGCHANGES.md  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  NOTICE.txt  README.md  vcpkg.json
sdk/storage/azure-storage-queues/: CHANGELOG.md  CMakeLists.txt  NOTICE.txt  README.md  README.txt  cgmanifest.json  vcpkg.json
sdk/storage/azure-storage-tables/: CMakeLists.txt
(+6105 files in other folders)
